# GATE

./: CMakeLists.txt  Length_of_String.c  Star1.c  Star2.c  Star3.c  character_array.c  different.c  main.c  new_learn.c  power.c  prac2.c  practise.c  reverse.c  starr.c  switch.c  tesr.c  testnew.c
