cmake_minimum_required(VERSION 3.17)
project(Practise_Problems C)

set(CMAKE_C_STANDARD 99)

add_executable(Practise_Problems main.c)

add_executable(Star1 Star1.c)
add_executable(Star2 Star2.c)
add_executable(Star3 Star3.c)

add_executable(Length_of_String Length_of_String.c)
add_executable(power power.c)
add_executable(reverse reverse.c)
add_executable(different different.c)

add_executable(switch switch.c)
add_executable(starr starr.c)

add_executable(character_array character_array.c)
add_executable(practise practise.c)
add_executable(prac2 prac2.c)
add_executable(tesr tesr.c)
add_executable(new_learn new_learn.c)
add_executable(testnew testnew.c)